Colaboratory를 통해 생성됨 - 1일차 Python Tips

--- a/TestCode.ipynb
+++ b/TestCode.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1ThUnLq2eUXmsQ7YfyLfHDwG2h0dDLvkh",
-      "authorship_tag": "ABX9TyNKMeKYRdN7M4C0F3km3ak/",
+      "authorship_tag": "ABX9TyPCsrIIZeqravN7RVu4iXPN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5407,9 +5407,622 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5PPqqqfsJq1u"
+      },
+      "source": [
+        "### Python Tips"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BexiQAgeJtOU"
+      },
+      "source": [
+        "### Unpacking\n",
+        "- 인덱스를 사용하는 대신 대입을 사용해 데이터를 언팩킹"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "W1aSYaiPJhnB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W1aSYaiPJhnB",
+        "outputId": "a0e619c0-2672-43e9-ee4b-09ffb89b21b2"
+      },
+      "source": [
+        "# Old Style\n",
+        "\n",
+        "snacks = [\n",
+        "          ('베이컨', 350),\n",
+        "          ('도넛', 240),\n",
+        "          ('머핀', 190)\n",
+        "]\n",
+        "\n",
+        "for i in range(len(snacks)) :\n",
+        "  item = snacks[i]\n",
+        "  name = item[0]\n",
+        "  calories = item[1]\n",
+        "  print(f'#{i+1}: {name}은 {calories} 칼로리 입니다.')"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "#1: 베이컨은 350 칼로리 입니다.\n",
+            "#2: 도넛은 240 칼로리 입니다.\n",
+            "#3: 머핀은 190 칼로리 입니다.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-oJoLL0rKF2q",
+        "outputId": "da6b879c-3eb5-4510-dbbb-2ea13c357b20"
+      },
+      "source": [
+        "# New Style\n",
+        "\n",
+        "for rank, (name, calories) in enumerate(snacks, 0) :\n",
+        "  print(f'#{rank}: {name}은 {calories} 칼로리 입니다.')"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "#0: 베이컨은 350 칼로리 입니다.\n",
+            "#1: 도넛은 240 칼로리 입니다.\n",
+            "#2: 머핀은 190 칼로리 입니다.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qVkQMwuGKPR0",
+        "outputId": "7d6826d8-7e9c-4ab2-afa6-bfa2dd13de45"
+      },
+      "source": [
+        "# New Style\n",
+        "\n",
+        "for rank, (name, calories) in enumerate(snacks, 1) :\n",
+        "  print(f'#{rank}: {name}은 {calories} 칼로리 입니다.')"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "#1: 베이컨은 350 칼로리 입니다.\n",
+            "#2: 도넛은 240 칼로리 입니다.\n",
+            "#3: 머핀은 190 칼로리 입니다.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7J2pI4-IKT-u"
+      },
+      "source": [
+        "#### Range 보다는 Enumerate를 사용"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1owRZn1nKSo-",
+        "outputId": "f2005dc2-e305-4cb6-dc94-cdd47c181f6b"
+      },
+      "source": [
+        "# Old Style \n",
+        "\n",
+        "flavor_list = ['바닐라', '초콜릿', '피칸', '딸기']\n",
+        "\n",
+        "for i in range(len(flavor_list)) :\n",
+        "  flavor = flavor_list[i]\n",
+        "  print(f'{i+1}: {flavor}')"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1: 바닐라\n",
+            "2: 초콜릿\n",
+            "3: 피칸\n",
+            "4: 딸기\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3QCYQ_F1KubF",
+        "outputId": "9f2b44aa-2d73-4d86-ac2d-33518bbbd1d6"
+      },
+      "source": [
+        "# Lazy generator \n",
+        "\n",
+        "flavor_list = ['바닐라', '초콜릿', '피칸', '딸기']\n",
+        "\n",
+        "it = enumerate(flavor_list)\n",
+        "print(next(it))\n",
+        "print(next(it))"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(0, '바닐라')\n",
+            "(1, '초콜릿')\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V4ajT18mKwfo",
+        "outputId": "02a190b2-20c6-428a-b27d-d35cfb7b876e"
+      },
+      "source": [
+        "# Lazy generator + unpacking\n",
+        "\n",
+        "for i, flavor in enumerate(flavor_list):\n",
+        "  print(f'{i+1}: {flavor}')"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1: 바닐라\n",
+            "2: 초콜릿\n",
+            "3: 피칸\n",
+            "4: 딸기\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G5p7a-GiK-76",
+        "outputId": "6ad3a988-e794-4e50-ad53-c5117b55e83f"
+      },
+      "source": [
+        "# Lazy generator + unpacking\n",
+        "\n",
+        "for i, flavor in enumerate(flavor_list, 1):\n",
+        "  print(f'{i}: {flavor}')"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1: 바닐라\n",
+            "2: 초콜릿\n",
+            "3: 피칸\n",
+            "4: 딸기\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8WoJXm9SLE-I"
+      },
+      "source": [
+        "#### Using Zip\n",
+        "\n",
+        "- 여러 이터레이터에 대해 나란히 루프를 수행하려면, zip을 사용"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lzdrF91KLD1g",
+        "outputId": "701cf5a9-54f2-4d5c-980c-82b017ed567a"
+      },
+      "source": [
+        "# Old Style \n",
+        "\n",
+        "names = ['Hong', '홍길동', '김서방']\n",
+        "counts = [17, 12, 11]\n",
+        "\n",
+        "for i in range(len(names)):\n",
+        "  name = names[i]\n",
+        "  count = counts[i]\n",
+        "  print(f'{name} : {count}')"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hong : 17\n",
+            "홍길동 : 12\n",
+            "김서방 : 11\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gh9o5WGULUOV",
+        "outputId": "b96ec9e2-ee06-4132-e14d-5eb40164e9de"
+      },
+      "source": [
+        "for name, count in zip(names, counts):\n",
+        "  print(f'{name} : {count}')"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hong : 17\n",
+            "홍길동 : 12\n",
+            "김서방 : 11\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GhfcjoMjLYen",
+        "outputId": "2127ea5e-7dd0-4508-d797-ff3c84842a70"
+      },
+      "source": [
+        "import itertools\n",
+        "names.append('제임스')\n",
+        "for name, count in itertools.zip_longest(names, counts):\n",
+        "  print(f'{name} : {count}')"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hong : 17\n",
+            "홍길동 : 12\n",
+            "김서방 : 11\n",
+            "제임스 : None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AxEkzGzpLgeD"
+      },
+      "source": [
+        "#### 별표식을 활용하자 (1/2)\n",
+        "\n",
+        "- 별표식 (starred expression)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 213
+        },
+        "id": "gsiELFHoLfKd",
+        "outputId": "1eb8c40b-be25-41ef-dc49-939a67efbd55"
+      },
+      "source": [
+        "car_ages = [0, 9, 4, 8, 7, 20, 19, 1, 6, 15]\n",
+        "car_ages_descending = sorted(car_ages, reverse=True)\n",
+        "#두 개의 item을 unpacking?\n",
+        "oldest, second_oldest = car_ages_descending"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-72-1c12ebfe44de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcar_ages_descending\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcar_ages\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreverse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#두 개의 item을 unpacking?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0moldest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond_oldest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcar_ages_descending\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H0DPuQ7wN-UY",
+        "outputId": "ea26cb8f-3542-45d0-b9c7-d5d57bc8085d"
+      },
+      "source": [
+        "oldest = car_ages_descending[0]\n",
+        "second_oldest = car_ages_descending[1]\n",
+        "others = car_ages_descending[2:]\n",
+        "\n",
+        "print(oldest, second_oldest, others)"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "20 19 [15, 9, 8, 7, 6, 4, 1, 0]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S3VXchZmOG1J",
+        "outputId": "7906e4fb-1f64-4492-cdb6-afd831752b44"
+      },
+      "source": [
+        "oldest, second_oldest, *others = car_ages_descending\n",
+        "print(oldest, second_oldest, others)"
+      ],
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "20 19 [15, 9, 8, 7, 6, 4, 1, 0]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uwLkX2tGOQIa",
+        "outputId": "4ed538ab-97e6-4f93-9b4a-7b042013ec19"
+      },
+      "source": [
+        "oldest, *others, youngest = car_ages_descending\n",
+        "print(oldest, youngest, others)"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "20 0 [19, 15, 9, 8, 7, 6, 4, 1]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        },
+        "id": "_MLWe7LsOYQq",
+        "outputId": "fe3f622c-8a32-4635-9b89-5ecf8325837f"
+      },
+      "source": [
+        "# 홀로 쓰일 수 없음\n",
+        "*others = car_ages_descending"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-77-06ed35b35331>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    *others = car_ages_descending\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m starred assignment target must be in a list or tuple\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aaNWXUyfOcjl"
+      },
+      "source": [
+        "#### 상황에 따라 함수에 default 인자를 활용\n",
+        "\n",
+        "-Doc string과 default 인자 활용"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        },
+        "id": "a_CsUT1xObG5",
+        "outputId": "5a82dbe1-7e7f-4c9a-9770-9eee0dd0cb04"
+      },
+      "source": [
+        "frm time import sleep\n",
+        "from datetime import datatime\n",
+        "\n",
+        "def log(message, when=datetime.now()):\n",
+        "  print(f'{when}:{message}')\n",
+        "\n",
+        "log('hi!!!')\n",
+        "sleep(0.1)\n",
+        "log('again!!!')"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-78-bdcc2b1b4b46>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    frm time import sleep\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        },
+        "id": "cjZ1vxNNOv_m",
+        "outputId": "618d4e0a-a08d-46d8-9b48-2dd27bca2c9b"
+      },
+      "source": [
+        "from time import from datetime import datetime\n",
+        "\n",
+        "def log(message, when=None):\n",
+        "  \"\"\"메시지와 타임스탬프를 로그에 남긴다. \n",
+        "\n",
+        "  Args : \n",
+        "    message : 출력할 메시지\n",
+        "    when : 메시지가 발생한 시각(datetime).\n",
+        "           디폴트값은 현재 시간\n",
+        "  \"\"\"\n",
+        "\n",
+        "  if when is None:\n",
+        "    when = datetime.now()\n",
+        "\n",
+        "  print(f'{when}:{message}')\n",
+        "\n",
+        "log('hi!!!')\n",
+        "sleep(0.1)\n",
+        "log('again!!!')"
+      ],
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-79-5e4613ca8962>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    from time import from datetime import datetime\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AMQVsqGjPLXf"
+      },
+      "source": [
+        "#### 예외 만들기\n",
+        "- 특별한 상황에 대비한 예외유형 정의 가능\n",
+        "- 임의로 예외 발생 가능\n",
+        "- raise 문 사용"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 307
+        },
+        "id": "iJl7CNg8PJsB",
+        "outputId": "d180b31f-e13d-4a6e-de42-35017568a739"
+      },
+      "source": [
+        "def make_error():\n",
+        "  raise NotImplementedError\n",
+        "make_error()"
+      ],
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NotImplementedError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-80-6fb8831abcde>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmake_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmake_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-80-6fb8831abcde>\u001b[0m in \u001b[0;36mmake_error\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmake_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mmake_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNotImplementedError\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D4ocooN_PTCh"
       },
       "source": [
         ""
