Colaboratory를 통해 생성됨 - 데이터분석 프로세스

--- a/Class2.ipynb
+++ b/Class2.ipynb
@@ -5,7 +5,10 @@
     "colab": {
       "name": "Class2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO8avHVvcHGdO7TtjRUA9nQ",
+      "collapsed_sections": [
+        "QA2oX-_v6XRo"
+      ],
+      "authorship_tag": "ABX9TyN5UTqCEgZFxZCcHg2gTi+y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,6 +187,167 @@
       },
       "source": [
         "#### 데이터를 읽어볼까요?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "86QoH-xn9vVi"
+      },
+      "source": [
+        "### 데이터분석 프로세스"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RS8eYcQ29yIX"
+      },
+      "source": [
+        "#### 데이터 분석 개요"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9pF5_7Yf91z6"
+      },
+      "source": [
+        "#### 데이터 분석"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zePr8MxS96Cb"
+      },
+      "source": [
+        "#### 데이터 분석 목적"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kpLowXf4Futc"
+      },
+      "source": [
+        "#### 데이터 분석 기법\n",
+        "\n",
+        "- 분류 (classification)\n",
+        "- 예측 (prediction)\n",
+        "- 군집화(clustering)\n",
+        "- 텍스트 마이닝(text mining)\n",
+        "- 오피니언 마이닝(opinion mining)\n",
+        "- 감성분석(sentiment analysis)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BvZRcw5OF-bc"
+      },
+      "source": [
+        "#### 데이터 분석 - 통계학\n",
+        "\n",
+        "- 데이터에서 의미를 찾는 방법을 다루는 학문\n",
+        "- 관찰을 통해 수집한 데이터를 통계적인 기법을 통해 일반화된 이론 도출"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2_k9YlYYGH-1"
+      },
+      "source": [
+        "#### 데이터 분석 - 통계\n",
+        "\n",
+        "상관관계 vs 인과관계"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JzWJbP17GLT0"
+      },
+      "source": [
+        "#### 일반적인 데이터분석 프로세스\n",
+        "\n",
+        "1. 데이터 수집\n",
+        "2. 데이터 전처리\n",
+        "3. 탐색적 데이터 분석(기술통계:자료의 정리, 패턴파악)\n",
+        "4. 모형 적합 및 평가(통계/머신러닝/딥러닝 모델링)\n",
+        "5. 시각화 및 리포팅(Visuallization & reporting)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AzY5CcNGGbxz"
+      },
+      "source": [
+        "#### 자료의 수집\n",
+        "\n",
+        "- 개체 (Item) : 연구자 또는 관찰자가 관심을 갖는 대상\n",
+        "  - (예) 신입사원\n",
+        "- 요인 (Factor) : 개체에 관한 특성 중 연구자가 특별히 관심을 갖는 특성\n",
+        "  - (예) 신입사원의 신체조건\n",
+        "- 변수 : 요인을 구성하고 있는 요소\n",
+        "  - (예) 키, 몸무게, 가슴둘레, 허리둘레, ..."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_y3rdk1tKfm9"
+      },
+      "source": [
+        "#### 데이터 전처리\n",
+        "\n",
+        "- 데이터 전처리의 주요 기법\n",
+        "  - 정제(Cleansing)\n",
+        "  - 통합(Integration)\n",
+        "  - 축소(Reduction)\n",
+        "  - 변환(Transformation)\n",
+        "- 관련 기술\n",
+        "  - Python(scipy), R, Brightics 등"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DknTI2IWKuMQ"
+      },
+      "source": [
+        "#### 탐색적 데이터분석\n",
+        "\n",
+        "- 기초통계량을 통한 데이터 분석\n",
+        "  - (중심) 위치통계량\n",
+        "  - 변이통계량\n",
+        "  - 모형통계량"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ewRdbCr7K2WZ"
+      },
+      "source": [
+        "#### 모형(모델) 구성\n",
+        "\n",
+        "- 다양한 모델 및 알고리즘 존재\n",
+        "  - 선형회귀, 상관관계분석, 분류(로지스틱, 결정트리 등) 등\n",
+        "  - 딥러닝(컴퓨터비전, 자연어처리 등)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "e7VTCH_XK9se"
+      },
+      "source": [
+        "#### 데이터 시각화\n",
+        "\n",
+        "- 차트의 다양한 종류들"
       ]
     },
     {
