Colaboratory를 통해 생성됨 - 데이터전처리

--- a/Class2.ipynb
+++ b/Class2.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "QA2oX-_v6XRo"
       ],
-      "authorship_tag": "ABX9TyN5UTqCEgZFxZCcHg2gTi+y",
+      "authorship_tag": "ABX9TyMXoPSuvgr1KTjEnFg8HbBM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -348,6 +348,135 @@
         "#### 데이터 시각화\n",
         "\n",
         "- 차트의 다양한 종류들"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-EesIhhKLSUa"
+      },
+      "source": [
+        "### 데이터 전처리"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I3vtDPozLSat"
+      },
+      "source": [
+        "#### 데이터 전처리의 필요성\n",
+        "\n",
+        "- 데이터 전처리는 분석 및 처리에 적합한 형식으로 데이터를 조작하는 것을 의미함\n",
+        "- Garbage In, Garbage Out"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2cIUZsntLb_N"
+      },
+      "source": [
+        "#### 데이터 전처리 주요기법\n",
+        "\n",
+        "- 정제(Cleansing)\n",
+        "- 통합(Integration)\n",
+        "- 축소(Reduction)\n",
+        "- 변환(Transformation)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fjTtVh4mLlfe"
+      },
+      "source": [
+        "#### 데이터정제\n",
+        "\n",
+        "- 불완전한 데이터 : 결측값"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eegyX1WfLpSm"
+      },
+      "source": [
+        "- 결측값(missing value) 처리 방법\n",
+        "\n",
+        "완전제거법(list-wise deletion)\n",
+        "\n",
+        "평균대체법(mean value imputation)\n",
+        "\n",
+        "핫덱대체(hot-deck imputation)\n",
+        "\n",
+        "다중대체법(multiple imputation)\n",
+        "\n",
+        "기타 결측값 대체 방법"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A-m7KmuML6Sm"
+      },
+      "source": [
+        "- 경향성을 훼손하는 데이터 : 이상값"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6IWl9gGTL95-"
+      },
+      "source": [
+        "- Box Plot - IQR과 정규분포의 비교"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wQlXdpCOMCP4"
+      },
+      "source": [
+        "- 데이터 표기 오류 (오픈데이터의 경우 빈번히 발생)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d8vBRUpjMFvh"
+      },
+      "source": [
+        "#### 데이터 통합"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "65V0JFR1MHfz"
+      },
+      "source": [
+        "#### 데이터 축소"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sAC1MCh4MJIl"
+      },
+      "source": [
+        "#### 데이터 변환\n",
+        "- Normalization"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w8etCAc2MMfw"
+      },
+      "source": [
+        "#### 데이터 변환 예시"
       ]
     },
     {
