--- a/Class2.ipynb
+++ b/Class2.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "QA2oX-_v6XRo"
       ],
-      "authorship_tag": "ABX9TyMXoPSuvgr1KTjEnFg8HbBM",
+      "authorship_tag": "ABX9TyNY4jmjrNKXKw96hcnFm82I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -477,6 +477,173 @@
       },
       "source": [
         "#### 데이터 변환 예시"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "blZp6LyjMbTP"
+      },
+      "source": [
+        "### 기초통계 및 시각화"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "24jXcOj4Mded"
+      },
+      "source": [
+        "#### 왜 통계인가?\n",
+        "\n",
+        "- 분야에 상관없이 데이터 기반의 분석으로 가장 올바르고 빠른 답을 제시해줌\n",
+        "- 중대한 의사 결정을 주관적인 경험에 의한 감으로 하시겠습니까?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cs3_EF2EMl65"
+      },
+      "source": [
+        "#### 데이터 척도의 종류\n",
+        "\n",
+        "범주형 자료\n",
+        "\n",
+        "연속형 자료"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dUZ44zdcSA-Y"
+      },
+      "source": [
+        "#### 독립변수와 종속변수\n",
+        "\n",
+        "원인(조작-제어)\n",
+        "\n",
+        "결과(측정한 결과)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ON77c-obSGZA"
+      },
+      "source": [
+        "#### 기술통계와 추론통계\n",
+        "\n",
+        "- 통계는 데이터를 분석하는 목적에 따라 두 가지로 구분됨\n",
+        "  - Descriptive Statistics(기술 통계)\n",
+        "  - Inferential Statistics(추리 통계)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z5y0wgcZSRXq"
+      },
+      "source": [
+        "#### 기술통계 : 위치 통계량\n",
+        "\n",
+        "최빈치(mode)\n",
+        "\n",
+        "중앙치(median)\n",
+        "\n",
+        "산술평균(mean)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I9gdCH2-SX3F"
+      },
+      "source": [
+        "#### 기술통계 : 변이통계량\n",
+        "\n",
+        "- 데이터의 흩어짐\n",
+        "- 편차(X-평균)의 제곱을 모두 더해 평균 낸 값"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QNQ92k62Sfiy"
+      },
+      "source": [
+        "#### 기술통계 : 모형통계량\n",
+        "\n",
+        "- 데이터의 외형적인 특징 분석"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hkTo7Kf4SmB_"
+      },
+      "source": [
+        "#### 탐색적 데이터분석(Exploratory Data Analysis, EDA)\n",
+        "\n",
+        "- 표준편차로 데이터의 '특수성'을 평가\n",
+        "  - 표준편차 +-1배의 범위 내 약 70%의 데이터\n",
+        "  - +-2배보다 멀리 떨어진 좌우데이터는 양쪽을 합쳐 5% 밖에 없다고 판단할 수 있다. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "474fpS5YS8mw"
+      },
+      "source": [
+        "#### 시각화(Visualization)\n",
+        "- 질적자료(범주형 데이터)를 그래프로 분석하기\n",
+        "  - 질적자료의 경우, 각 항목은 빈도수를 의미함.\n",
+        "  - 범주의 빈도가 어떤지 파악하는 일이 많으며, 범주형 변수의 빈도를 확인하기 위해 파이차트, 컬럼차트, 바차트를 활용."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FzS8LgVETIbh"
+      },
+      "source": [
+        "- 질적자료(범주형 데이터)를 그래프로 분석하기"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NAhZN2V5TLbr"
+      },
+      "source": [
+        "- 하나의 수치형 데이터 : 히스토그램, 박스플롯\n",
+        "  - 사용자가 원하는 범주에 따라 해당 범주의 빈도를 막대로 표현함으로써, 빈도의 수준과 상대적 크기의 차이를 시각적으로 판단할 수 있음\n",
+        "\n",
+        "  히스토그램 : 도수분포표를 시각화\n",
+        "  - 수치형 데이터를 계급으로 나누고, 각 계급의 빈도수를 막대그래프로 표현함"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fzjHTOMcTa9T"
+      },
+      "source": [
+        "- 히스토그램도 어느정도 분포를 가늠할 수 있는 정보를 주지만, 상자그림은 이보다 더 정확히 구간을 정해 나타낼 수 있음\n",
+        "- 분포의 형태를 정의하는 다양한 통계량들도 제시가 가능\n",
+        "- 수치형 변수의 분포적 특성을 자세히 나타냄"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2D5V0cZlTmnB"
+      },
+      "source": [
+        "- 두 수치형 데이터 : 산점도\n",
+        "  - 두 개의 수치형 변수의 연관성에 대해 시각적 분석이 가능\n",
+        "  - 히스토그램은 수치형 변수의 계급에 대한 전반적인 분포(산포도, 중심)를 확인하지만 두 변수의 연관성을 파악하기 어려움"
       ]
     },
     {
