--- a/Class3.ipynb
+++ b/Class3.ipynb
@@ -6,7 +6,7 @@
       "name": "Class3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMBJ44a/HLr1Dh4610lmaKY",
+      "authorship_tag": "ABX9TyOpqdKaGchEqE9Hiczgjd2x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,6 +94,151 @@
         "- 데이터 분석을 위한 NumPy 라이브러리의 이해와 활용\n",
         "- 데이터 시각화를 위한 Matplotlib 라이브러리의 이해와 활용\n",
         "- 파이썬 기반 데이터 분석 실습 프로젝트"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jh_a6nYTWBCH"
+      },
+      "source": [
+        "### NumPy 라이브러리 소개"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "afHKreYXWDcZ"
+      },
+      "source": [
+        "#### Python 기반 라이브러리"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RbEXSsP7WGIc"
+      },
+      "source": [
+        "#### NumPy 라이브러리 소개\n",
+        "- Numerical Python의 줄임말\n",
+        "- 대규모의 고성능 수치 계산을 위한 파이썬 라이브러리\n",
+        "- N차원의 배열을 효율적으로 다룰 수 있는 라이브러리\n",
+        "- https://numpy.org/"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xGHao5zkWQbO"
+      },
+      "source": [
+        "#### N차원(N-Dimension)\n",
+        "- 1차원 - 선\n",
+        "- 2차원 - 면\n",
+        "- 3차원 - 공간\n",
+        "- 4차원 ...\n",
+        "- 5차원 ...\n",
+        "- ...\n",
+        "- N차원"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LEvJlNi9WZ_1"
+      },
+      "source": [
+        "#### 2차원 데이터"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rrkbYrbwWdXA"
+      },
+      "source": [
+        "#### 이미지 데이터\n",
+        "\n",
+        "- 흑백 이미지 데이터는 몇 차원일까요? 2차원 데이터 (높이 X 너비) \n",
+        "  - 이미지는 수많은 픽셀로 구성되어 있음\n",
+        "  - 흑백(gray-scale) 이미지는 각 픽셀의 밝기 값을 0~255 사이로 표현한 이미지\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u33n_tSCWpn3"
+      },
+      "source": [
+        "- 컬러 이미지 데이터는 몇 차원일까요? 3차원 데이터(높이 X 너비 X 컬러채널)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GLtFg2qJWv_7"
+      },
+      "source": [
+        "#### 영상 데이터\n",
+        "- 영상 데이터는 몇 차원일까요? 4차원 데이터 (프레임 X 높이 X 너비 X 컬러채널)\n",
+        "  - 연속된 형태의 수많은 이미지들이 모인 형태"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oBn7tEfKW4Ld"
+      },
+      "source": [
+        "#### ndarray\n",
+        "- NumPy는 다양한 차원의 배열을 효율적으로 다룰 수 있는 라이브러리\n",
+        "- NumPy는 ndarray(N-Dimension Array)라는 핵심 자료구조를 제공함\n",
+        "  - 대규모 데이터 집합을 담을 수 있는 매우 빠르고 유연한 핵심 자료구조"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4jLUap-QXDfk"
+      },
+      "source": [
+        "#### NumPy의 주요 특징\n",
+        "\n",
+        "- much easier to learn and use\n",
+        "- 대규모의 고성능 수치 계산을 위한 파이썬 라이브러리\n",
+        "-> 연산 속도가 빠르고, 메모리를 효율적으로 사용\n",
+        "- N차원의 배열을 효율적으로 다룰 수 있는 라이브러리\n",
+        "-> 반복문 작성 필요 없이 N차원의 데이터 배열을 바로 연산할 수 있음"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9kKn47PnXWkb"
+      },
+      "source": [
+        "#### NumPy 를 배운다는 것은?\n",
+        "\n",
+        "- 다양한 차원의 데이터를 ndarray에 저장, 추가, 수정, 삭제할 수 있고\n",
+        "- ndarray 에 저장된 데이터들을 연산, 조회, 정렬할 수 있고\n",
+        "- 다양한 데이터들을 원하는 뷰로 결합하여 활용할 수 있는\n",
+        "- 파이썬 기반으로 만들어진 도구 사용법을 배우는 과정"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WWw_HA8SXlJl"
+      },
+      "source": [
+        "#### NumPy 시작하기\n",
+        "- NumPy 실습환경(이미 설치되어 있음)\n",
+        "- NumPy 라이브러리 설치\n",
+        "\n",
+        "> conda install numpy\n",
+        "\n",
+        "> pip install numpy"
       ]
     },
     {
