--- a/Class3.ipynb
+++ b/Class3.ipynb
@@ -6,7 +6,7 @@
       "name": "Class3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOpqdKaGchEqE9Hiczgjd2x",
+      "authorship_tag": "ABX9TyOWcFxTz+CR3BAf3wCffohc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -242,6 +242,110 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "e5zoSOuAX5ZK"
+      },
+      "source": [
+        "### NumPy의 자료구조 : ndarray"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mq1GGuApX82_"
+      },
+      "source": [
+        "- 다양한 차원의 배열을 효율적으로 다룰 수 있는 라이브러리\n",
+        "- NumPy는 ndarray(N-Dimensional Array)라는 핵심 자료구조를 제공함\n",
+        "  - 대규모 데이터 집합을 담을 수 있는 매우 빠르고 유연한 핵심 자료구조"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pZm4x-GEuc77"
+      },
+      "source": [
+        "#### 1차원 ndarray의 구성요소\n",
+        "- 형태(shape)\n",
+        "- 원소의 수(size)\n",
+        "- 저장된 데이터 타입(dtype)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y-ZgMF3YujBO"
+      },
+      "source": [
+        "2차원 ndarray의 구성요소\n",
+        "- 형태(shape)\n",
+        "- 원소의 수(size)\n",
+        "- 저장된 데이터 타입(dtype)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DaA6N0nnuoih"
+      },
+      "source": [
+        "#### 3차원 ndarray의 구성요소\n",
+        "- 형태(shape)\n",
+        "- 원소의 수(size)\n",
+        "- 저장된 데이터 타입(dtype)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pfAp_sDEuupH"
+      },
+      "source": [
+        "#### ndarray의 구성요소 : 축(axis)\n",
+        "- 배열의 각 차원(dimension)\n",
+        "- 축(axis)\n",
+        "- 차원(축)의 개수 : ndim = 1\n",
+        "- shape : (10,)\n",
+        "- 차원(축)의 개수 : ndim = 2\n",
+        "- shape : (3, 4)\n",
+        "- 차원(축)의 개수 : ndim = 3\n",
+        "- shape : (3, 4, 3)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wW-G96HpvLLQ"
+      },
+      "source": [
+        "#### ndarray 의 구성요소\n",
+        "- 형태(shape)\n",
+        "- 원소의 수(size)\n",
+        "- 저장된 데이터 타입(dtype)\n",
+        "- 차원(축)의 개수 (ndim)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6JlKxYeFvVCr"
+      },
+      "source": [
+        "#### NumPy 시작하기"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lzwTahYDve4g"
+      },
+      "source": [
+        "- NumPy 라이브러리 호출 및 별칭(alias) 지정 (np.XXX)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "byYQxYFj8t9n"
@@ -251,6 +355,15 @@
       ],
       "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vtpYj_k9vk9W"
+      },
+      "source": [
+        "- NumPy 에서 제공하는 함수 호출시 alias 이용해서 호출 가능"
+      ]
     },
     {
       "cell_type": "code",
@@ -273,6 +386,29 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RPuEzECfvpru"
+      },
+      "source": [
+        "#### ndarray의 구성요소\n",
+        "- ndarray의 주요 속성\n",
+        "  - 형태 : ndarray.shape\n",
+        "  - 원소의 수 : ndarray.size\n",
+        "  - 저장된 데이터의 타입 : ndarray.dtype\n",
+        "  - 배열의 차원(축)의 수 : ndarray.ndim"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Dv1fBz0qv2ZN"
+      },
+      "source": [
+        "#### ndarray의 생성"
       ]
     },
     {
@@ -308,6 +444,19 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kt_qseFDv76q"
+      },
+      "source": [
+        "np.array(object, dtype)\n",
+        "- 입력된 데이터(object)를 인자로 받아 ndarray를 생성하는 함수\n",
+        "- Parameters : \n",
+        "  - object : ndarray에 저장할 데이터 \n",
+        "  - dtype : 배열의 데이터 타입, 기본 값은 None, 생략가능"
       ]
     },
     {
