Colaboratory를 통해 생성됨 - NumPy의 자료구조 : ndarray

--- a/Class3.ipynb
+++ b/Class3.ipynb
@@ -6,7 +6,7 @@
       "name": "Class3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOWcFxTz+CR3BAf3wCffohc",
+      "authorship_tag": "ABX9TyNDj7x7UWb58U7fAxb5yr9o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -353,7 +353,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -377,7 +377,7 @@
       "source": [
         "print(np.__version__)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,7 +431,7 @@
         "print('type = ', type(arr))\n",
         "print(\"shape: {}, size: {}, dtype: {}, dimension: {}\".format(arr.shape, arr.size, arr.dtype, arr.ndim))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,9 +460,147 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_lApuJmGTSyg"
+      },
+      "source": [
+        "#### 2차원 ndarray의 생성"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "fCDduwCO-W61"
+        "id": "fCDduwCO-W61",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "11101e67-0cdd-422c-f3f4-4fc59400f40a"
+      },
+      "source": [
+        "# 2차원 ndarray 생성\n",
+        "data = [[1,2,3],[4,5,6]]\n",
+        "arr = np.array(data)\n",
+        "\n",
+        "# 생성한 ndarray의 속성 출력\n",
+        "print('\\nCreate 2D Array')\n",
+        "print(arr)\n",
+        "print('type = ', type(arr))\n",
+        "print(\"shape: {}, size: {}, dtype: {}, dimension: {}\".format(arr.shape, arr.size, arr.dtype, arr.ndim))"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Create 2D Array\n",
+            "[[1 2 3]\n",
+            " [4 5 6]]\n",
+            "type =  <class 'numpy.ndarray'>\n",
+            "shape: (2, 3), size: 6, dtype: int64, dimension: 2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aNa8_0WcTqqJ"
+      },
+      "source": [
+        "#### dtype = float 를 지정하면?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TpNU-5XeTprU",
+        "outputId": "3e93b9c6-2e65-4a33-d68e-63a6c9ace962"
+      },
+      "source": [
+        "# 2차원 ndarray 생성\n",
+        "data = [[1,2,3],[4,5,6]]\n",
+        "arr = np.array(data, dtype = float)\n",
+        "\n",
+        "# 생성한 ndarray의 속성 출력\n",
+        "print('\\nCreate 2D Array')\n",
+        "print(arr)\n",
+        "print('type = ', type(arr))\n",
+        "print(\"shape: {}, size: {}, dtype: {}, dimension: {}\".format(arr.shape, arr.size, arr.dtype, arr.ndim))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Create 2D Array\n",
+            "[[1. 2. 3.]\n",
+            " [4. 5. 6.]]\n",
+            "type =  <class 'numpy.ndarray'>\n",
+            "shape: (2, 3), size: 6, dtype: float64, dimension: 2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f7eEMptkUE7d"
+      },
+      "source": [
+        "#### 3차원 ndarray의 생성"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r8zBxLwqUDxp",
+        "outputId": "c44c7cdd-f1f2-4e16-a545-37411d720632"
+      },
+      "source": [
+        "# 3차원 ndarray 생성\n",
+        "data = [[[1,2,3],[4,5,6]],[[3,2,1],[4,5,6]]]\n",
+        "arr = np.array(data, dtype = float)\n",
+        "\n",
+        "#생성한 ndarray의 속성 출력\n",
+        "print('\\nCreate 3D Array')\n",
+        "print(arr)\n",
+        "print('type = ', type(arr))\n",
+        "print(\"shape: {}, size: {}, dtype: {}, dimension: {}\".format(arr.shape, arr.size, arr.dtype, arr.ndim))"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Create 3D Array\n",
+            "[[[1. 2. 3.]\n",
+            "  [4. 5. 6.]]\n",
+            "\n",
+            " [[3. 2. 1.]\n",
+            "  [4. 5. 6.]]]\n",
+            "type =  <class 'numpy.ndarray'>\n",
+            "shape: (2, 2, 3), size: 12, dtype: float64, dimension: 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jerXJ7veUcNb"
       },
       "source": [
         ""
